# warehouse-api-test

./: .env.example  .flake8  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 282345896c6c_add_rolls.py  54ed187eb046_add_rolls.py  5dc1871278e4_initial_migration.py
app/: dependencies.py  main.py
app/api/: __init__.py  rolls.py  routers.py
app/api/dependencies/: __init__.py  filters.py
app/api/endpoints/: __init__.py  rolls.py  statistics.py
app/core/: __init__.py  base.py  config.py  db.py  error_handlers.py  redis.py
app/crud/: __init__.py  rolls.py
app/models/: __init__.py  rolls.py
app/schemas/: __init__.py  filters.py  rolls.py
app/scripts/: generate_rolls.py
app/services/: __init__.py  statistics.py
app/tests/: __init__.py
app/tests/factories/: __init__.py  rolls.py
infra/: Dockerfile  docker-compose.yaml
